
11. Re-worked documentation to use Sphinx.  The end result is that the
    "source" for the docs is in ``docs/source/``, there's an HTML
    version that's built by Sphinx in ``docs/build/html/``, and it's a
    lot easier to read and use now.  Thank you to the Sphinx team!

12. Reworked the command line for static rendering.  It now works like
    this::

        pyblosxom-cmd --config <path/to/config/file> \
                      staticrender [--incremenal]

    If the ``config.py`` file is in your ``PYTHONPATH``, then you can
    skip the ``--config <path/to/config/file>`` stuff.

13. Removed portalocker code.  This will cause any plugins using the
    locking code to fail.  The only one I saw like this was the
    logstats plugin which had a lot of other problems.

14. Added a ``--silent`` flag to pyblcmd so that it quells all stdout.
    This is useful for cron jobs.

15. Added ``truncate_date`` config variable.  When set to True, it
    causes date-based archives to be truncated to ``num_entries`` entries.
    Defaults to False.

    Example::

        py["truncate_date"] = True

16. Added ``truncate_category`` config variable.  When set to True, it
    causes category-based archives to be truncated to ``num_entries``
    entries.  Defaults to True.

    Example::

        py["truncate_category"] = True

17. Added ``truncate_frontpage`` config variable.  When set to True, it
    causes the front page ``num_entries`` entries.  Defaults to True.

    Example::

        py["truncate_frontpage"] = True


Pertinent to developers:
------------------------

1. ``Pyblosxom.tools.VariableDict`` is no more.

2. If you have template variables that end in ``_urlencoded`` and
   ``_escaped``, it's better to instead call
   ``tools.escape_text(...)`` and ``tools.urlencode_text(...)`` or use
   filter functions ``$escape(var)`` and ``$urlencode(var)``.

3. The blosxom renderer has undergone a bunch of fixes.  If you