@@ -16,5 +16,5 @@ Benjamin Mako Hill
 
 
 If you think your name should be on this list, but it isn't _please_
-let us know.  It's likely that it was left off by accident and not
-on purpose.
+let us know.  It's likely that it was left off by accident and not on
+purpose.
