@@ -1,6 +1,7 @@
 The MIT License (http://www.opensource.org/licenses/mit-license.php)
 
-Copyright (c) 2003, 2004, 2005, 2006 Wari Wahab
+Copyright (c) 2003-2006 Wari Wahab
+Copyright (c) 2003-2010 Will Kahn-Greene
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
