@@ -2,6 +2,7 @@
 # This file is part of PyBlosxom.
 #
 # Copyright (c) 2003-2008 Wari Wahab
+# Copyright (c) 2003-2010 Will Kahn-Greene
 #
 # PyBlosxom is distributed under the MIT license.  See the file LICENSE
 # for distribution details.
