@@ -2,13 +2,13 @@
  TODO
 ======
 
-This is a really high-level todo list.  Nothing here is written
-in stone--this is mostly just a collection of thoughts.  As such, not
+This is a really high-level todo list.  Nothing here is written in
+stone--this is mostly just a collection of thoughts.  As such, not
 everything in here will make sense to implement.  Each item really
 needs fleshing out before decisions on implementation should be made.
 
-Before launching into anything, check the SVN repository which has 
-the latest version of this TODO list.
+Before launching into anything, check the SVN repository which has the
+latest version of this TODO list.
 
 If you're inspired by any of these tasks, let us know on the
 pyblosxom-devel mailing list.
